Available quesitons for a subejct are visible inside the test view (UI Fixes)

--- a/AuthSystem/wwwroot/css/site.css
+++ b/AuthSystem/wwwroot/css/site.css
@@ -71,3 +71,8 @@ body {
 .subjects-container {
     margin : 10px
 }
+.fixed-tabs {
+    font-style : oblique;
+    font-size : large
+   
+}
